[package]
name = "configx"
version = "0.1.0"
authors = ["Kardo <kardotinambunan12@gmail.com>"]
edition = "2021"
repository = "https://github.com/username/configx"
keywords = ["config", "yaml", "toml", "json", "auto-reload"]
categories = ["config"]


[lib]
name = "configx"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.145"
toml = "0.8"
thiserror = "1.0"
notify = "6.1"
crossbeam-channel = "0.5"
regex = "1.12.2"
